# tool-kit

./: package.json
.github/workflows/: release.yml
release-notes/: v0.4.1.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  settings.rs
src-tauri/src/ocr/: mod.rs
src/components/: about.tsx  json-formatter.tsx  json-tree.tsx  settings.tsx
src/lib/: json-themes.ts  settings-api.ts  use-update.ts
