[package]
name = "app"
version = "0.4.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = "3.6.1"
image = { version = "0.25.10", default-features = false, features = ["png", "gif"] }
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-global-shortcut = "2"
base64 = "0.22"
dirs = "5"
sha2 = "0.11"
open = "5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
auto-launch = "0.5"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1"

[target.'cfg(target_os = "windows")'.dependencies]
clipboard-win = { version = "5.4", features = ["std"] }
windows = { version = "0.61", features = [
    "Foundation",
    "Foundation_Collections",
    "Globalization",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
] }


